--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "redux_firebase",
   "version": "0.1.0",
-  
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -17,6 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-redux": "^8.0.2",
     "react-redux-firestore": "^0.0.1",
     "react-router-dom": "^6.3.0",
