--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
